# gerbil-software

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile.dev  Dockerfile.jetson  README.md  REMOTE_VISUALIZATION.md
g_install/: clone_git.sh
gerbil_bringup/: CMakeLists.txt  package.xml
gerbil_bringup/config/: gerbil_controllers.yaml
gerbil_bringup/launch/: gerbil.launch.xml
gerbil_description/: CMakeLists.txt  package.xml
gerbil_description/launch/: display.launch.xml
gerbil_description/rviz/: urdf_config.rviz
gerbil_description/urdf/: mobile_base.ros2_control.xacro  mobile_base.xacro
gerbil_driving/src/imu_package/: setup.py
gerbil_hw/: CMakeLists.txt  README.md
gerbil_hw/config/: controller_manager.yaml
gerbil_hw/include/gerbil_hw/: motor_joint.hpp  roboclaw_hardware_interface.hpp  roboclaw_unit.hpp
gerbil_hw/include/roboclaw_hardware_interface/: motor_joint.hpp  roboclaw_unit.hpp  (+1 more)
gerbil_hw/launch/: bringup.launch.py
gerbil_hw/src/: motor_joint.cpp  roboclaw_hardware_interface.cpp  roboclaw_unit.cpp
gerbil_hw/urdf.old/: gerbil_robot.urdf
scripts/: check_pid.py  configure_pid.py  test_enc.py
src/gerbil_description/: package.xml
src/gerbil_hw/: gerbil_hw.xml  package.xml
src/imu_package/: README.md  package.xml
src/vendors/: README.md  gerbil_map.pgm  gerbil_map.yaml
vendors/roboclaw_serial/: CMakeLists.txt  README.md
vendors/roboclaw_serial/include/roboclaw_serial/: command.hpp  device.hpp  interface.hpp
(+29 files in other folders)
